add manage spare part on preventive maintenance